# Acceleration-Free-Analytical-Regressor-Filtering

./: .gitmodules  Readme.md
AF-CLRC_Sim_Code_and_Data/: CLRC_RNE.mdl  CLRC_acc.mdl  CLRC_acc_f1.mdl  CLRC_acc_f2.mdl  CLRC_filter_reg.mdl  CLRC_parsim.m  DDF_Test_main.m  Panda_run.m  Readme.md  RegComp_main.m
AF-CLRC_Sim_Code_and_Data/FrictionModel_Matlab/: FrictionPar.m  Regressor_fric.m
AF-CLRC_Sim_Code_and_Data/RNE_Package/: Fullparms2Baseparms.m  P_RNE.mat
AF-CLRC_Sim_Code_and_Data/dynamic_model/: ComputeTorque.m  opt_par.m
AF-CLRC_Sim_Code_and_Data/regressor_Panda/: Base_Regressor_Panda_43.m  Base_Regressor_Panda_64.m  Base_Slotine_Panda.m  Coriolis_Reg.m  Hb_panda.m  Regressor_Panda_full.m  Regressor_Panda_full_gravity.m  baseparmes.m
AF-CLRC_Sim_Code_and_Data/sim_fig/: RMSE.m  compfig.m  fig_draw.m  table_gen.m
AF-CLRC_Sim_Code_and_Data/sim_fig_DDF/: fig_DDF.m  opt_filtering.m
AF-CLRC_Sim_Code_and_Data/trajectory/: traj_gen_fun.m  traj_gen_main.m
AF_CLRC_Exp_Code/: Readme.md
AF_CLRC_Exp_Code/Exp_Program/: Main.m  Panda_run.m  exp_CLRC_AF.slx  exp_CLRC_DDF.slx  exp_MC.slx  traj_test.slx
AF_CLRC_Exp_Code/franka_matlab_v0.3.0/: LICENCE  README.md  franka_matlab_configs.mat  init_franka_matlab.m
AF_CLRC_Exp_Data/Payload results/: Readme.md
AF_CLRC_Exp_Data/Payload-free results/: Readme.md  table_results.m  traj_fig_draw.m
C++_simulations/: .gitignore  CMakeLists.txt  README.md  package.xml
C++_simulations/data/: P.csv
C++_simulations/include/filtered_regressor/: PhiFilter.h  franka_model.h  real_parameter.h  sim_regressor.h
C++_simulations/src/: sim_regressor.cpp
C++_simulations/src/launch/: simulate.launch
C++_simulations/src/models/: baseRegressor.cpp  baseRegressor_NoF.cpp  baseSlotine.cpp  real_parameter.cpp  regressor.cpp
(+175 files in other folders)
